--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-scroll-horizontal": "^1.6.6",
+    "react-sticky-el": "^2.0.9",
     "sass": "^1.53.0",
     "web-vitals": "^2.1.4"
   },
